# STM32_LIN_FDCAN_TOOL

./: .gitignore  README.md  README.md.orig  version.txt
FAQ/: faq.md
Firmware/GCC/F105RCT6/: makefile
Firmware/GCC/F105RCT6/Startup/: startup_stm32f105rctx.s
Firmware/GCC/F205RET6/: makefile
Firmware/GCC/F205RET6/Startup/: startup_stm32f205retx.s
Firmware/GCC/F407VET6/: makefile
Firmware/GCC/H730ZBT6/: makefile
Firmware/Keil/bootloader/: F105_bootloader.uvprojx  F205_bootloader.uvprojx
Firmware/Keil/template/: F105.uvprojx  F205.uvprojx  F407.uvprojx  H730.uvprojx
GUI/Code/Master_Terminal/: CMakeLists.txt  CMakeLists.txt.user.eed8b3d  Languages.qrc  MasterTerminal.qrc  qtquickcontrols2.conf
GUI/Compiled/Windows10_64/: CMakeCache.txt
qt_interface/compiled/Ubuntu_22+/: Master_Terminal.sh
qt_interface/compiled/Windows10_64/: qtcsettings.cmake
qt_interface/src/Master_Terminal/: CMakeLists.txt  CMakeLists.txt.user.153d058  CMakeLists.txt.user.fbbb16b  MasterTerminal.qrc  android_release.keystore
qt_interface/src/Master_Terminal/android/: AndroidManifest.xml  build.gradle  gradle.properties
qt_interface/src/Master_Terminal/android/src/org/qtproject/jniusbserial/: JniUsbSerial.java
qt_interface/src/Master_Terminal/content/: App.qml  AppDrawer.qml  AppDrawer_default.qml  AppToolBar.qml  CMakeLists.txt  CoreImport.qml  qmldir
qt_interface/src/Master_Terminal/content/pages/: Base.qml  Base_AdjustOdoMlt.qml  Base_AdjustTyresThreshold.qml  Base_CAN_Scanner.qml  Base_Device_Modes.qml  Base_LIN_Scanner.qml  Base_LIN_Settings.qml  Base_Main.qml  Base_ManualOverride.qml  Base_MemoryMonitor.qml  Base_MemoryWrite.qml  Base_SelectModel.qml  Base_Update.qml  Component_Base_CAN_Override_discard_id.qml  Component_Base_CAN_Override_injection_ovr.qml  Component_Base_CAN_Scanner_Analyzer.qml  Component_Base_CAN_Scanner_Scanner.qml  Component_Base_SelectModel_Modellist.qml  Component_DrawerItem_Help_Main.qml  Component_DrawerItem_Language_Languagelist.qml  Component_DrawerItem_UserProfile_Userdata.qml  Component_DrawerItem_UserProfile_Userlist.qml  Component_DrawerItem_View_Advanced.qml  Component_DrawerItem_View_Simple.qml  DrawerItem_Debug.qml  DrawerItem_Settings.qml  Item_CAN_override_filter.qml  Sub_View_Advanced_SimpleItems.qml  Title.qml
qt_interface/src/Master_Terminal/content/pages/BaseItems/: AnimatedDigit.qml  BaseTableView.qml  BaseTableViewLINMonitor.qml  BaseTextField.qml  CentralButton.qml  MltButton.qml  PinIcon.qml
qt_interface/src/Master_Terminal/content/pages/SimpleItems/: RoundedButtonA.qml  RoundedButtonChBxA.qml  RoundedSlider.qml  RoundedSliderAnnotated.qml  RoundedTextInput.qml
qt_interface/src/Master_Terminal/res/languages/: Chinese.qm  Chinese.ts  Czech.qm  Czech.ts  English.qm  English.ts  Kyrgizian.qm  Kyrgizian.ts  Russian.qm  Russian.ts  Ukrainian.qm  Ukrainian.ts
qt_interface/src/Master_Terminal/src/: app_environment.h  app_settings.h  main.cpp  main.h  resources.rc
qt_interface/src/Master_Terminal/src/core/: Console.cpp  Console.h  Core.cpp  Core.h  CoreStatus.cpp  CoreStatus.h  Version.cpp  Version.h  VersionManager.cpp  VersionManager.h
qt_interface/src/Master_Terminal/src/core/design/: Appdesign.cpp  Appdesign.h  Containerdesign.cpp  Containerdesign.h
qt_interface/src/Master_Terminal/src/core/user_profile/: PhoneNumber.cpp  PhoneNumber.h  Userprofile.cpp  Userprofile.h
qt_interface/src/Master_Terminal/src/engine/: Obj_list_model.h
qt_interface/src/Master_Terminal/src/engine/bus/: BusDataProperty.cpp  BusDataProperty.h  BusManager.cpp  BusManager.h  BusParser.cpp  BusParser.h  CanBusItem.cpp  CanBusItem.h  LinBusDataProperty.h  LinBusItem.cpp  ParseBuffer.cpp  ParseBuffer.h  ParseFilter.h
qt_interface/src/Master_Terminal/src/engine/command_manager/: Command.h  CommandConstructor.cpp  CommandConstructor.h  CommandManager.cpp  CommandManager.h  StringConvertor.h
qt_interface/src/Master_Terminal/src/engine/file_manager/: FileManager.h  QClassLoader.h
qt_interface/src/Master_Terminal/src/engine/memory/: MemoryDataItem.cpp  MemoryDataItem.h  MemoryDataProperty.cpp  MemoryDataProperty.h  MemoryManager.cpp  MemoryManager.h  MemoryTablemodel.h
qt_interface/src/Master_Terminal/src/engine/serial_port/: CDC_Driver.cpp  CDC_Driver.h  CDC_JNI_Driver.cpp  CDC_JNI_Driver.h  CDC_PC_Driver.cpp  CDC_PC_Driver.h  QSerialPortConfig.cpp  QSerialPortConfig.h  QSerialPortConfigItem.cpp  QSerialPortConfigItem.h  QSerialPortConfigJNI.h  QSerialPortConfigPC.cpp  QSerialPortConfigPC.h  QSerialPortConfigProperty.cpp  QSerialPortConfigProperty.h  SerialConfig_Preset.cpp  SerialConfig_Preset.h
qt_interface/src/Master_Terminal/src/engine/stm32_device/: DeviceManager.cpp  DeviceManager.h  Lin_filter.h  OverrideStatus.cpp  OverrideStatus.h
qt_interface/src/Master_Terminal/src/engine/stm32_device/QML_Model/: QDiscardId_ModelItem.cpp  QDiscardId_ModelItem.h  QDiscardId_ModelProperty.cpp  QDiscardId_ModelProperty.h  QLinConfigItem.h  QLinConfigProperty_BaudRate.h  QLinConfigProperty_FilterPreset.h  QLinOverrideFilter_ModelProperty.cpp  QLinOverrideFilter_ModelProperty.h  QOverrideFilter_ModelItem.cpp  QOverrideFilter_ModelItem.h  QOverrideFilter_ModelProperty.cpp  QOverrideFilter_ModelProperty.h
qt_interface/src/Master_Terminal/src/engine/translator/: Qmltranslator.cpp  Qmltranslator.h
qt_interface/src/Master_Terminal/src/engine/vehicle/: Vehicle.cpp  Vehicle.h
qt_interface/src/Master_Terminal/src/engine/vehicle/QML_Model/: QVehicle_ModelItem.cpp  QVehicle_ModelItem.h  QVehicle_ModelProperty.cpp  QVehicle_ModelProperty.h
qt_interface/src/Master_Terminal/src/engine/web/: Downloader.cpp  Downloader.h  WebConfig.cpp  WebConfig.h  WebConfig_Preset.cpp  WebConfig_Preset.h  WebManager.cpp  WebManager.h
stm32/Core/src/: can_buffer.c  can_override.c
stm32/Keil/105_205_bin/: spi_engine_105_lib.uvprojx  spi_engine_205_lib.uvprojx
stm32/Keil/105_205_bootloader/: bootloader_105.uvprojx  bootloader_205.uvprojx
stm32/Keil/105_205_template/: 105_template.uvguix.svetl  105_template.uvoptx  105_template.uvprojx  205_template.uvprojx
(+1098 files in other folders)
